# SampleSLTProject

./: .gitignore  CMakeLists.txt  README.md
assets/render_programs/: object.prog
assets/render_programs/shaders/: object.frag  object.vert
assets/render_programs/uniform_blocks/: camera_data.glsl  object_data.glsl
src/: main.cpp
